# VisSelect

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/visselect/: __init__.py  dataset.py  subset.py
tests/: testDataset.py  testSubset.py  tests.py
